--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de CEP</title>
-    <!-- Inclua os arquivos CSS do Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="mt-5">Consulte seu endereço</h1>
-      <div class="mb-3">
-        <label for="cep" class="form-label">Digite seu CEP</label>
-        <input type="number" class="form-control" id="cep">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buscador de CEP</title>
+  <!-- Inclua os arquivos CSS do Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/components/css/styles.css">
+  <!-- Adicionando fonte Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap">
+  <!-- Adicionando Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+</head>
+<body>
+  <div class="container mt-5">
+    <h1 class="text-center">Consulte seu endereço</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="mb-3">
+          <label for="cep" class="form-label">Digite seu CEP</label>
+          <input type="text" class="form-control" maxlength="9" id="cep">
+        </div>        
+        <button id="consultarBtn" class="btn btn-primary">Consultar</button>
+        <div id="resultado" class="mt-3">
+          <p>Seu resultado aqui:</p>
+        </div>
       </div>
-      <button id="consultarBtn" class="btn btn-primary">Consultar</button>
-      <div id="resultado">
-        <p class="mt-3">Seu resultado aqui:</p>
+      <div class="col-md-6">
+        <div id="map" style="height: 400px; margin-top: 20px;"></div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="/components/js/script.js"></script>
+</body>
 </html>
